internal/loader/testdata/invalid/syntax-error/cue.mod/module.cue
module: "example.com/syntax-error@v0"

language: version: "v0.15.0"
